# automage-agent-customization

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml
automage_agents/: __init__.py
automage_agents/api/: __init__.py  client.py  mock_client.py  (+2 more)
configs/: automage.docker.toml  automage.example.toml
delivery/: database-skill-delivery-zh.md
docs/: GitHub.md  config_template_guide.md  openclaw集成.md  会议纪要.md  开发参考01.md  开发清单.md  里程碑交付.docx  项目参考01.md  项目参考02.md  项目参考03.md  项目参考04.md  项目参考05.md  项目参考06.md  项目参考07.md  项目参考08.md
examples/: create_real_user_example.py  onboarding_demo.py
openclaw/: HEARTBEAT.md  MEMORY.md
references/: hermes_openclaw_runtime.md  hwt_m2_real_backend_integration_plan.md  landing_page_p0_p1_p2.md  milestone2_0506_acceptance.md  milestone2_issue_log.md  real_hermes_openclaw_wsl2_integration.md  yang_mock_skill_field_alignment.md
scripts/: check_openclaw_plugin_tool_runtime.py  check_real_hermes_skill_server.py  check_real_openclaw_bridge.py  check_real_openclaw_gateway_ready.py  check_real_openclaw_plugin.py  check_yang_skill_field_alignment.py  demo_mock_flow.py  feishu_event_listener.py  feishu_production_loop_smoke.py  init_db.py  onboard_new_user.py  smoke_real_api.py
tests/: test_daily_report_api.py  test_feishu_im_flow.py  test_feishu_production_loop.py  test_hermes_skills_api.py  test_idempotency_flow.py  test_manager_decision_task_flow.py  test_openclaw_bridge_api.py  test_openclaw_forwarder_delivery.py  test_scheduler_jobs.py  test_smoke_real_api_plan.py  test_staff_daily_report_parser.py
(+261 files in other folders)
