[project]
name = "automage-agents"
version = "0.1.0"
description = "AutoMage-2 Hermes/OpenClaw-ready agent skeleton"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1.0",
    "psycopg[binary]>=3.2,<4.0",
    "SQLAlchemy>=2.0,<3.0",
    "uvicorn>=0.30,<1.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
